# python-package-template

./: README.md  pyproject.toml  setup-dev-linux.sh  setup-dev-windows.cmd
.github/workflows/: test.yml  testreport.yml
src/package_name/: module_name.py
tests/: test_module_name.py
