[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package-template"

dynamic = ["version"]

readme = "README.md"

requires-python = ">=3.10"

license = {file = "LICENSE"}

#keywords = ["sample", "setuptools", "development"]

authors = [
  {name = "Randers kommune", email = "?@randers.dk" }
]

maintainers = [
  {name = "Randers kommune", email = "?@randers.dk" }
]

dependencies = [
  "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "requests-mock",
    "flake8",
    "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/Randers-Kommune-Digitalisering/python-package-template"
"Bug Reports" = "https://github.com/Randers-Kommune-Digitalisering/python-package-template/issues"
